[package]
name = "zf-zebrachain"
version = "0.0.7"
description = """
ZebraChain is a logged, quantum safe signing protocol designed to replace the long lived asymmetric
key pairs used to sign software releases (and to sign other super important stuff).
"""
authors = ["Jason Gerard DeRose <jasonderose@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/zf-zebrachain"
repository = "https://github.com/zebrafactory/zebrachain"
keywords = ["pqc", "awesomeness"]
categories = ["cryptography"]
edition = "2024"
rust-version = "1.87"

[dependencies]
arrayvec = "0.7.6"
blake2 = "0.10.6"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
ed25519-dalek = "2.1.1"
getrandom = "0.3.0"
hex-literal = "1.0.0"
ml-dsa = { version = "=0.0.4", default-features = false, features = ["zeroize"] }
signature = "2.2.0"
subtle = "2.6.1" 
zeroize = "1.8.1"

[dev-dependencies]
tempfile = "3.14.0"

[profile.dev]
opt-level = 2
