[package]
name = "zf-zebrachain"
version = "0.0.12"
description = """
🦓 🔗 ZebraChain is a logged, quantum safe signing protocol designed to replace the long lived
asymmetric key pairs used to sign software releases (and to sign other super important stuff).
"""
authors = ["Jason Gerard DeRose <jasonderose@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/zf-zebrachain"
repository = "https://github.com/zebrafactory/zebrachain"
keywords = ["pqc", "awesomeness"]
categories = ["cryptography"]
edition = "2024"
rust-version = "1.91"

[dependencies]
argon2 = { version = "=0.6.0-rc.2", default-features = false, features = ["alloc", "zeroize"] }
arrayvec = "0.7.6"
blake2 = "0.11.0-rc.3"
chacha20poly1305 = { version = "=0.11.0-rc.2", default-features = false, features = ["alloc"] }
ed25519-dalek = "=3.0.0-pre.2"
getrandom = "0.3.4"
hex-literal = "1.1.0"
ml-dsa = { version = "=0.1.0-rc.2", default-features = false, features = ["zeroize"] }
signature = "=3.0.0-rc.5"
subtle = "2.6.1"
zeroize = { version = "1.8.2", features = ["derive", "zeroize_derive"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.dev]
opt-level = 2
